@@ -69,7 +69,8 @@
 #ifdef SUPPORT_OSPF_API
 int ospf_apiserver_init (void);
 void ospf_apiserver_term (void); 
-extern int ospf_apiserver_enable;
+/* Init apiserver? It's disabled by default. */
+int ospf_apiserver_enable;
 #endif /* SUPPORT_OSPF_API */
 
 static void ospf_opaque_register_vty (void);
